force-app/main/default/objects/Routing_Form_Route__c/Routing_Form_Route__c.object-meta.xml
<CustomObject>
    <description>A routing rule that maps form answers to a target event type</description>
    <label>Routing Form Route</label>
    <nameField>
        <displayFormat>RFR-{00000}</displayFormat>
        <label>Route ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Form Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>