force-app/main/default/objects/Routing_Form_Route__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>JSON-encoded condition: {"fieldId": "...", "operator": "equals", "value": "..."}</description>
    <label>Condition</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>