force-app/main/default/objects/Routing_Form_Route__c/fields/Routing_Form__c.field-meta.xml
<CustomField>
    <fullName>Routing_Form__c</fullName>
    <label>Routing Form</label>
    <referenceTo>Routing_Form__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>