force-app/main/default/objects/Routing_Form_Route__c/fields/Target_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Event_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target Event Type</label>
    <referenceTo>Event_Type__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>